--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -16,7 +16,9 @@
   			      <th><%= t('global.short') %></th>
               <th><%= t('global.abbrevation') %></th>
               <th><%= t('global.address') %></th>
+              <th><%= t('global.email') %></th>
   			      <th style="width:17px;"></th>
+              <th style="width:17px;"></th>
   			    </tr>
   			  </thead>
   			  <tbody>
@@ -26,6 +28,12 @@
               <td><%= company.short %></td>
               <td><%= company.abb %></td>
               <td><%= company.address %></td>
+              <td><%= company.mail %></td>         
+                <td>
+                  <%= link_to(edit_company_path(company)) do %>
+                    <span class="glyphicon glyphicon-pencil"></span>
+                  <% end %>
+                </td>
   		          <td>
   		            <%= link_to(company_path(company), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
   		              <span class="glyphicon glyphicon-remove"></span>
