--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -1,23 +1,23 @@
-<% provide(:title, 'New stock') %>
+<% provide(:title, t('stock.new.title')) %>
 
 <%= bootstrap_form_for(@stock, :url => company_type_stocks_path(params[:company_id], params[:type_id]), :html => { :class => 'form-horizontal', :multipart => true }, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block) do |f| %>
   <%= f.alert_message t('global.errors') %>
   
   <div class="panel panel-default">
     <div class="panel-heading">
-      <div class="panel-title">New stock</div>
+      <div class="panel-title"><%= t('stock.new.legend') %></div>
     </div>
     <div class="panel-body">
-      <%= f.text_field :name %>
-      <%= f.text_field :amount %>
-      <%= f.text_field :amount_per_app %>
-      <%= f.text_field :minimum %>
+      <%= f.text_field :name, label: t('global.name') %>
+      <%= f.text_field :amount, label: t('global.amount') %>
+      <%= f.text_field :amount_per_app, label: t('global.amount_per_app') %>
+      <%= f.text_field :minimum, label: t('global.minimum') %>
       <%= f.form_group :send_mail do %>
-        <%= f.check_box :send_mail %>
+        <%= f.check_box :send_mail, label: t('global.send_mail') %>
       <% end %>
     </div>
     <div class="panel-footer">
-      <%= f.submit 'Save', data: { disable_with: 'Saving' } %>
+      <%= f.submit t('stock.edit.button'), data: { disable_with: t('stock.edit.button_send') } %>
     </div>
   </div>
 <% end %>
