--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, t('entry.edit.title')) %>
 
-<%= bootstrap_form_for(@entry, method: :patch, :url => company_entry_path(params[:company_id], @entry), :html => { :class => 'form-horizontal', :multipart => true }, style: :horizontal, left: "col-sm-2", right: "col-sm-6", help: :block) do |f| %>
+<%= bootstrap_form_for(@entry, method: :patch, :url => company_shipment_entry_path(params[:company_id], params[:shipment_id], @entry), :html => { :class => 'form-horizontal', :multipart => true }, style: :horizontal, left: "col-sm-2", right: "col-sm-6", help: :block) do |f| %>
   <%= f.alert_message t('global.errors') %>
   
   <div class="panel panel-default">
@@ -45,4 +45,4 @@
   </div>
 <% end %>
  
-<%= link_to t('global.back'), company_entries_path(params[:company_id]) %>
+<%= link_to t('global.back'), company_shipment_entries_path(params[:company_id], params[:shipment_id]) %>
