--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -1,6 +1,6 @@
 // Landing page
 .landing {
-  background-color: lighten($brand-success, 30%);
+  background-color: lighten($brand-info, 30%);
   .landing-logo-wrapper {
     text-align: center;
     margin-bottom: 15px;
