shipment number for entry tickets

--- a/app/views/entries/ticket.html.erb
+++ b/app/views/entries/ticket.html.erb
@@ -30,6 +30,7 @@
       </div>
       <div class="col right-col">
         <ul>
+          <li><strong><%= t('global.shipment_cap') %>: </strong><%= @entry.shipment.number %></li>
           <li><strong><%= t('global.brand') %>: </strong><%= @entry.type.brand %></li>
           <li><strong><%= t('global.typenum') %>: </strong><%= @entry.type.typenum %></li>
           <li><strong><%= t('global.serialnum') %>: </strong><%= @entry.serialnum %></li>
