cross appliance order numbers

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -49,6 +49,7 @@
     color: $gray-lighter;
     margin: 0 !important;
     padding: 15px 0;
+    padding-left: 15px;
     position: relative;
   }
 }
