re-added checkboxes to batch update

--- a/app/assets/javascripts/controllers/home_controller.js.erb
+++ b/app/assets/javascripts/controllers/home_controller.js.erb
@@ -17,17 +17,19 @@ function addCheckboxes(label) {
   var inputs = $(".form-group");
   for (var i = 1; i < inputs.length; i++) {
     var input = inputs[i];
-    try {
-      var which_input = input.children[1].children[0].id;
-      if (which_input != "") {
-        input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input + '_enable"><input name="entry[enable][' + which_input + ']" value="0" type="hidden"><input id="' + which_input + '_enable" name="entry[enable][' + which_input + ']" value="1" type="checkbox"> ' + label + '</label></div>';
+    //try {
+      if (input.children.length > 1) {
+        var which_input = input.children[1].id;
+        $(input.children[1]).addClass('col-md-9');
+        input.innerHTML = input.innerHTML + '<div class="checkbox col-md-3 batch-update"><label for="' + which_input + '_enable"><input name="entry[enable][' + which_input + ']" value="0" type="hidden"><input id="' + which_input + '_enable" name="entry[enable][' + which_input + ']" value="1" type="checkbox"> ' + label + '</label></div>';
       } else {
-        var which_input_checkbox = input.children[1].children[0].children[0].htmlFor;
-        input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input_checkbox + '_enable"><input name="entry[enable][' + which_input_checkbox + ']" value="0" type="hidden"><input id="' + which_input_checkbox + '_enable" name="entry[enable][' + which_input_checkbox + ']" value="1" type="checkbox"> ' + label + '</label></div>';
+        var which_input_checkbox = input.children[0].children[0].htmlFor;
+        $(input.children[0]).addClass('col-md-9');
+        input.innerHTML = input.innerHTML + '<div class="checkbox col-md-3 batch-update"><label for="' + which_input_checkbox + '_enable"><input name="entry[enable][' + which_input_checkbox + ']" value="0" type="hidden"><input id="' + which_input_checkbox + '_enable" name="entry[enable][' + which_input_checkbox + ']" value="1" type="checkbox"> ' + label + '</label></div>';
       }
-    }
-    catch(e) {
+    //}
+    //catch(e) {
       // Don't do anything with errors as I know how bad this is, it still works properly
-    }
+    //}
   }
 }
