--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -40,4 +40,4 @@ $state-danger-bg:      lighten($brand-danger, 30%);
 $state-danger-border:  lighten($brand-danger, 20%);
 
 // Global font
-$font-family-sans-serif: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif: 'Merriweather Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
