--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -16,6 +16,9 @@
     &:hover {
       color: $gray-lighter;
     }
+    @media (min-width: $screen-sm-min) {
+      margin-left: 15px !important;
+    }
   }
   .navbar-nav {
     li {
